--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Index.cshtml
@@ -9,7 +9,7 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@Html.BeginForm("Index","CambioProducto",FormMethod.Post,new { @role = "form", @class = "form"})
+@using (Html.BeginForm("Index", "CambioProducto", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
 <div class="box ">
     <div class="box-header with-border">
