--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Nuevo.cshtml
@@ -24,14 +24,14 @@
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-4">
+            <div class="col-md-10">
                 <div class="form-group">
                     <label for="Codigo">Proveedor*</label>
                     @Html.Partial("_CmbProveedor_Consignacion", Model.IdProveedor)
                     @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="GetHtml">Fecha de consignación*</label>
                     <div class="input-group date">
@@ -51,41 +51,51 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="form-group">
                     <label for="GetHtml">Sucursal*</label>
-                    @Html.Partial("_CmbSucursal_Consignacion", Model.IdSucursal)
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @id = "IdSucursal" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="form-group">
-                    <label for="GetHtml">Observación*</label>
-                    @Html.TextAreaFor(q => q.Observacion, new { @class = "form-control", @rows = 3 })
-                    @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
+                    <label for="GetHtml">Bodega*</label>
+                    @Html.DropDownListFor(q => q.IdBodega, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_Descripcion"), new { @class = "form-control", @id = "IdBodega" })
+                    @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
+        <div class="row">
             <div class="col-md-12">
-                <div class="form-group">
-                    @Html.Action("GridViewPartial_consignacion_det")
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="GetHtml">Observación*</label>
+                        @Html.TextAreaFor(q => q.Observacion, new { @class = "form-control", @rows = 3 })
+                        @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Consignacion",new { Area = "Inventario" },null)">Cancelar</a>
-    </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        @Html.Action("GridViewPartial_consignacion_det")
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="box-footer">
+            <button type="submit" class="btn btn-primary">Guardar</button>
+            <a class="btn btn-default" href="@Url.Action("Index","Consignacion",new { Area = "Inventario" },null)">Cancelar</a>
+        </div>
 
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
-}
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
+        }
