--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoPorRubro/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoPorRubro/Nuevo.cshtml
@@ -92,7 +92,7 @@
                         @Html.DevExpress().CheckBoxFor(q => q.es_indifinido, settings =>
                    {
                        settings.Name = "es_indifinido";
-                       settings.Text = "Indifinido";
+                       settings.Text = "Indefinido";
                        settings.Properties.ClientSideEvents.CheckedChanged = "function(s,e){mostrar_fechas();}";
 
                    }).GetHtml()
