--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
@@ -186,7 +186,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdBanco_acreditacion">Tipo flujo</label>
-                    @Html.Partial("_CmbFlujo_OP", Model.IdTipoFlujo)
+                    @Html.Partial("_CmbFlujo_Deudas", Model.IdTipoFlujo)
                     @Html.ValidationMessageFor(q => q.IdTipoFlujo, "", new { @class = "text-danger" })
                 </div>
             </div>
