--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/_CmbProducto_Consignacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/_CmbProducto_Consignacion.cshtml
@@ -21,7 +21,7 @@
     })
 
      .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.ConsignacionController().get_list_bajo_demanda,
-      new Core.Erp.Web.Areas.Inventario.Controllers.ConsignacionController().get_info_bajo_demanda).Bind((Model.GetType() == typeof(Core.Erp.Info.Inventario.in_Consignacion_det_Info) || Model.GetType() == typeof(List<Core.Erp.Info.Inventario.in_Consignacion_det_Info>)) ? "" : (Model == 0 ? "" : Model));
+      new Core.Erp.Web.Areas.Inventario.Controllers.ConsignacionController().get_info_bajo_demanda).Bind((Model.GetType() == typeof(Core.Erp.Info.Inventario.in_ConsignacionDet_Info) || Model.GetType() == typeof(List<Core.Erp.Info.Inventario.in_ConsignacionDet_Info>)) ? "" : (Model == 0 ? "" : Model));
 
 
 }
