--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/Index.cshtml
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_importacion_novedades", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_importacion_novedades", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin})
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
