--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/_GridViewPartial_importacion_novedades.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/_GridViewPartial_importacion_novedades.cshtml
@@ -1,30 +1,15 @@
 @using System.Web.UI.WebControls;
-@model Core.Erp.Info.RRHH.ro_empleado_novedad_Info
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridViewPartial_importacion_novedades_det";
-        settings.CallbackRouteValues = new { Controller = "ImportacionNovedades", Action = "GridViewPartial_importacion_novedades_det", IdEmpleado = Model == null ? 0 : Model.IdEmpleado, IdNovedad = Model == null ? 0 : Model.IdNovedad };
-        settings.KeyFieldName = "Secuencial";
+        settings.Name = "GridView_empleado_novedad";
+        settings.CallbackRouteValues = new { Controller = "EmpleadoNovedad", Action = "GridViewPartial_empleado_novedad", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
+
         settings.Width = Unit.Percentage(100);
-
-
-        settings.SettingsEditing.Mode = GridViewEditingMode.Inline;
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "ImportacionNovedades", Action = "EditingAddNew", Area = "RRHH" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ImportacionNovedades", Action = "EditingUpdate", Area = "RRHH" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ImportacionNovedades", Action = "EditingDelete", Area = "RRHH" };
-
-        settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowNewButton = true;
-        settings.CommandColumn.ShowEditButton = true;
-        settings.CommandColumn.ShowDeleteButton = true;
-
-        settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsBehavior.EnableCustomizationWindow = true;
-
-        settings.SettingsPager.Visible = true;
-        settings.Settings.ShowGroupPanel = false;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        settings.KeyFieldName = "IdNovedad";
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
 
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
@@ -33,67 +18,95 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        //Funcion para inicializar fila al presionar nuevo
-
-        settings.InitNewRow = (s, e) =>
+        //Configuración scrolling y pager
+        settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
+        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
+        settings.Settings.VerticalScrollableHeight = 400;
+        settings.SettingsPager.Visible = true;
+        settings.SettingsPager.PageSize = 10;
+        settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
+        settings.SettingsPager.AlwaysShowPager = true;
+        //Configuración filtro por columna
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        settings.Settings.ShowFilterRow = true;
+        settings.Settings.ShowHeaderFilterButton = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        //Configuracion exportacion
+        settings.SettingsExport.EnableClientSideExportAPI = true;
+        settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
+        settings.Toolbars.Add(t =>
         {
-            e.NewValues["FechaPago"] = DateTime.Now;
-           
+            t.EnableAdaptivity = true;
+            t.Items.Add(GridViewToolbarCommand.ExportToPdf).Text = "Exportar a PDF";
+            t.Items.Add(GridViewToolbarCommand.ExportToXls).Text = "Exportar a XLS";
+            t.Items.Add(GridViewToolbarCommand.ExportToXlsx).Text = "Exportar a XLSX";
+            t.Items.Add(GridViewToolbarCommand.ExportToDocx).Text = "Exportar a DOCX";
+            t.Items.Add(GridViewToolbarCommand.ExportToRtf).Text = "Exportar a RTF";
+            t.Items.Add(GridViewToolbarCommand.ExportToCsv).Text = "Exportar a CSV";
+        });
+        settings.SettingsExport.RenderBrick = (sender, e) =>
+        {
+            if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
+                e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
-
-        settings.Columns.Add(column =>
+        //Evento para pintar de rojo las filas anuladas
+        settings.HtmlRowPrepared = (s, e) =>
         {
-            column.FieldName = "IdRubro";
-            column.Caption = "Rubro";
-            column.Width = Unit.Percentage(35);
-            column.EditorProperties().ComboBox(p =>
+            if (Convert.ToString(e.GetValue("Estado")) == "I")
             {
-                p.Columns.Add("IdRubro", "Código").Width = Unit.Percentage(20);
-                p.Columns.Add("ru_descripcion", "Descripción").Width = Unit.Percentage(70);
-                p.Columns.Add("ru_tipo", "Tipo").Width = Unit.Percentage(10);
-                p.ValueField = "IdRubro";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_rubro;
-                p.Width = Unit.Percentage(100);
+                e.Row.ForeColor = System.Drawing.Color.Red;
+            }
+        };
+        settings.Columns.Add(c =>
+        {
+            c.Caption = "#";
+            c.SetDataItemTemplateContent(tc =>
+            {
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                {
+                    ViewContext.Writer.Write(
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(tc.DataItem, "IdNovedad") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(tc.DataItem, "IdNovedad") },
+                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                    );
+                }
             });
+            c.SetHeaderTemplateContent(tc =>
+            {
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                );
+            });
+            c.Settings.AllowDragDrop = DefaultBoolean.False;
+            c.Settings.AllowSort = DefaultBoolean.False;
+            c.Width = Unit.Pixel(120);
         });
+
+        settings.Columns.Add("IdNovedad", "ID").Width = Unit.Percentage(5);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "FechaPago";
-            column.Caption = "Fecha pago";
-            column.Width = Unit.Percentage(15);
+            column.FieldName = "Fecha";
+            column.Caption = "Fecha";
+            column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "d";
-            column.EditorProperties().DateEdit(sp =>
-            {
-                column.PropertiesEdit.DisplayFormatString = "d";
-                sp.Width = Unit.Percentage(100);
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Valor";
-            column.Caption = "$Valor";
-            column.Width = Unit.Percentage(15);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
 
-            });
         });
+
+        settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(8);
+        settings.Columns.Add("pe_nombreCompleto", "Nombres").Width = Unit.Percentage(22);
+        settings.Columns.Add("Descripcion", "Nómina").Width = Unit.Percentage(8);
+        settings.Columns.Add("DescripcionProcesoNomina", "Proceso").Width = Unit.Percentage(15);
+        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "Observacion";
-            column.Caption = "Descripción";
-            column.Width = Unit.Percentage(30);
-            column.EditorProperties().TextBox(sp =>
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
             {
-                sp.Width = Unit.Percentage(100);
 
             });
         });
     });
-
 }
-@grid.Bind(Model.lst_novedad_det).GetHtml()
+@grid.Bind(Model).GetHtml()
