--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/_GridViewPartial_importacion_novedades_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/_GridViewPartial_importacion_novedades_det.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_importacion_novedades_det";
-        settings.CallbackRouteValues = new { Controller = "ImportacionNovedades", Action = "GridViewPartial_importacion_novedades", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
+        settings.CallbackRouteValues = new { Controller = "ImportacionNovedades", Action = "GridViewPartial_importacion_novedades_det", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
 
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "Secualcial";
@@ -33,21 +33,6 @@
         //Configuracion exportacion
         settings.SettingsExport.EnableClientSideExportAPI = true;
         settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
-        settings.Toolbars.Add(t =>
-        {
-            t.EnableAdaptivity = true;
-            t.Items.Add(GridViewToolbarCommand.ExportToPdf).Text = "Exportar a PDF";
-            t.Items.Add(GridViewToolbarCommand.ExportToXls).Text = "Exportar a XLS";
-            t.Items.Add(GridViewToolbarCommand.ExportToXlsx).Text = "Exportar a XLSX";
-            t.Items.Add(GridViewToolbarCommand.ExportToDocx).Text = "Exportar a DOCX";
-            t.Items.Add(GridViewToolbarCommand.ExportToRtf).Text = "Exportar a RTF";
-            t.Items.Add(GridViewToolbarCommand.ExportToCsv).Text = "Exportar a CSV";
-        });
-        settings.SettingsExport.RenderBrick = (sender, e) =>
-        {
-            if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
-                e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
-        };
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
@@ -70,12 +55,7 @@
                     );
                 }
             });
-            c.SetHeaderTemplateContent(tc =>
-            {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
-            });
+           
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(120);
@@ -93,27 +73,7 @@
        
         settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(8);
         settings.Columns.Add("pe_nombreCompleto","Nombres").Width = Unit.Percentage(22);
-        settings.Columns.Add("Descripcion","Nómina").Width = Unit.Percentage(8);
-        settings.Columns.Add("DescripcionProcesoNomina","Proceso").Width = Unit.Percentage(15);
-        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(10);
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "EstadoBool";
-            column.Caption = "Estado";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
-            column.EditorProperties().CheckBox(sp =>
-            {
-
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.SetDataItemTemplateContent(c =>
-            {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_003", "RRHHReportes", new { Area = "Reportes", IdEmpleado = DataBinder.Eval(c.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(c.DataItem, "IdNovedad") }, Request.Url.Scheme) + "');\"></span>");
-            });
-            column.Width = Unit.Percentage(5);
-        });
+       
     });
 }
-@grid.Bind(Model).GetHtml()
+@grid.Bind(Model.detalle).GetHtml()
